syntax = "proto3";

option java_package = "com.example.order.proto";
option java_multiple_files = true;
option java_outer_classname = "OrderServiceProto";

message CurrentUser {
  string uid = 1; // User id
  string authorization = 2; // authorization
}

message OrderHelloRequest {
  uint32 a_age = 1;
  string name = 2; // 用户名
  optional bytes file = 3; // 文件内容
  CurrentUser current_user = 10; // 当前用户
}

message OrderHelloResp {
  int32 err_code = 1;
  optional string err_msg = 2;
  optional string name = 3;
  optional uint32 age = 4;
}

// login
message LoginReq {
  string username = 1;
  string password = 2;
}
message LoginRes {
  uint32 err_code = 1;
  string err_msg = 2;
  string token = 3;
  optional string token_name = 10;
  optional string token_value = 11;
}

// simple method
message HomeReq {
  optional int32 req = 1;
  map<string, int32> http_headers = 2;
}

message HomeRes {
  int32  err_code = 1;
  optional string err_msg = 2;
}

service OrderService {
  rpc login(LoginReq) returns (stream LoginRes);

  rpc  hi(OrderHelloRequest) returns (OrderHelloResp);

  rpc  sayHello(OrderHelloRequest) returns (OrderHelloResp);

  rpc home(HomeReq) returns(HomeRes);
}